--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <title>Cabanha Piterini</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f5f5f5;
+      color: #333;
+    }
+    header {
+      background: #2f4f2f;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    main {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,.1);
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Cabanha Piterini</h1>
+  <p>Sistema de Gestão Pecuária</p>
+</header>
+
+<main>
+  <div class="card">
+    <h2>Bem-vindo</h2>
+    <p>
+      Este é o sistema privado da Cabanha Piterini para controle de:
+    </p>
+    <ul>
+      <li>Rebanho</li>
+      <li>Nascimentos</li>
+      <li>Sanidade</li>
+      <li>Financeiro</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h2>Acesso</h2>
+    <p>Área restrita. Somente usuários autorizados.</p>
+  </div>
+</main>
+
+</body>
+</html>
 
